<resources>
    <string name="app_name">Breathwork</string>
    <string name="meditation_name_placeholder">Meditation Name</string>
    <string name="url">http://www.guidedmeditationtreks.com/healing-breathwork.html</string>
    <string name="totalTimePlaceholder">Total time spent in meditation</string>
    <string name="pickASession">Pick a session to Begin</string>
    <string name="background_image">background image</string>
    <string name="timer_button_description">silent timer button</string>
    <string name="back">Back</string>
    <string name="app_info_link">app info link</string>

    <string name="breath_volume">Breath Volume</string>
    <string name="breath_speed">Breath Speed</string>
    <string name="voice_volume">Voice Volume</string>
    <string name="music_volume">Ambiance Volume</string>
</resources>
