<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guidedmeditationtreks.breathwork.MeditationActivity"
    android:keepScreenOn="true"
    android:background="@color/colorBlack"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/background" />

    <ImageView
        android:id="@+id/buddha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/buddha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meditationNameTextView"
        fontPath="fonts/font-diner-coffee-service.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/meditation_name_placeholder"
        android:textColor="@color/colorTitle"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/appTitle"
        fontPath="fonts/font-diner-coffee-service.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorTitle"
        app:layout_constraintLeft_toRightOf="@id/backButton"
        app:layout_constraintTop_toTopOf="@id/backButton" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0:00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playPauseButton" />


    <ToggleButton
        android:id="@+id/playPauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="55dp"
        android:background="@drawable/button_custom"
        android:gravity="center"
        android:onClick="didTapPlayPause"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meditationNameTextView" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:gravity="center"
        android:onClick="didTapBackButton"
        android:src="@mipmap/back"
        android:tag="0"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/breathVolumeSeekBarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breath_volume"
            android:textColor="@color/colorTitle"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appTitle"
    />
    <SeekBar
            android:id="@+id/breathVolumeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/breathVolumeSeekBarTextView"
    />

    <TextView
            android:id="@+id/breathSpeedSeekBarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breath_speed"
            android:textColor="@color/colorTitle"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/breathVolumeSeekBar"
    />
    <SeekBar
            android:id="@+id/breathSpeedSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/breathSpeedSeekBarTextView"
            android:padding="0dp"
    />

    <TextView
            android:id="@+id/voiceVolumeSeekBarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_volume"
            android:textColor="@color/colorTitle"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/breathSpeedSeekBar"
    />
    <SeekBar
            android:id="@+id/voiceVolumeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/voiceVolumeSeekBarTextView"
            android:padding="0dp"
    />

    <TextView
            android:id="@+id/musicVolumeSeekBarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_volume"
            android:textColor="@color/colorTitle"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/voiceVolumeSeekBar"
    />
    <SeekBar
            android:id="@+id/musicVolumeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/musicVolumeSeekBarTextView"
    />
</android.support.constraint.ConstraintLayout>
